--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+v0.2.23
+New Features:
+    -Adding support for /check_instant_ach.
+    -Adding support for blockchain_address filter in /get_transactions
+
 v0.2.22
 In this release we included support for new endpoints and fixed some uncompleted response objects.
 New Features:
