--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+v0.2.24
+New Features:
+    -Adding support for /get_institutions.
+
 v0.2.23
 New Features:
     -Adding support for /check_instant_ach.
