--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,11 +1,11 @@
 v0.2.26
 Enhancements:
     - Added MatchScore, AccountOwnerName, and EntityName to the response in /get_accounts.
-    - Added business_uuid to the response in /register.
+    - Added BusinessUuid to the response in /register.
     - Added IsDefault a new optional input in /register_wallet.
     - Added AndroidPackageName a new optional input in /plaid_link_token.
 Breaking changes:
-    -Register for BusinessUser does not return BaseResponse anymore, it returns BusinessUserResponse object.
+    - Register for BusinessUser does not return BaseResponse anymore, it returns BusinessUserResponse object.
 
 v0.2.24
 New Features:
