--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,18 @@
+v0.2.30
+Enhancements:    
+    - Added cardName a new optional input in /Issue_Sila.
+    - Added cardName a new optional input in /Redeem_Sila.
+    - Added CardAccountName a new optional input in SearchFilters in /get_transactions.    
+    - Added CardAccountName to the response in /get_transactions. 
+    - Updated RestSharp version to 106.12.0
+New Features:
+    - Added support for /get_cards.
+    - Added support for /link_card.
+    - Added support for /delete_card. 
+    - Added support for /reverse_transaction.
+    - Added support for /get_webhooks.
+    - Exposed RateLimit-Limit and RateLimit-Remaining parameters in header in APIs endpoint.
+
 v0.2.28
 Enhancements:
     - Added Devices info to the response in /get_entity.
