--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -2,8 +2,8 @@ v0.2.30
 Enhancements:    
     - Added cardName a new optional input in /Issue_Sila.
     - Added cardName a new optional input in /Redeem_Sila.
-    - Added CardAccountName a new optional input in SearchFilters in /get_transactions.    
-    - Added CardAccountName to the response in /get_transactions. 
+    - Added CardName a new optional input in SearchFilters in /get_transactions.    
+    - Added CardName to the response in /get_transactions. 
     - Updated RestSharp version to 106.12.0
 New Features:
     - Added support for /get_cards.
