--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+v0.2.30-rc3
+Hotfix:
+    - Added new field WalletId in response /get_wallet and /get_wallets.
+
 v0.2.30-rc2
 Hotfix:
     - Added new field qualification_details in response /check_instant_ach.
