Added Reference to the response in API returns

--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,7 +1,7 @@
 v0.2.36
 Enhancements:        
     - Added Reference to the response in API returns. 
-    - Added CARD a new optional input in ProcessingType in /Redeem_Sila.    
+    - Added CARD a new optional input in ProcessingType in /redeem_sila.    
     - Added ErrorCode to the response for Instant ACH. 
     - Added Members list to the response in /get_entity.
     - Added UuId a new optional input in WalletSearchFilters in /get_wallets.
