Handle null value for the fields AvailableBalance and CurrentBalance in response /get_account_balance

--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+v0.2.36-rc1
+Hotfix:
+    - Handle null value for the fields AvailableBalance and CurrentBalance in response /get_account_balance.
+
 v0.2.36
 Enhancements:        
     - Added Reference to the response in API returns. 
