--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,14 @@
+v0.2.39
+Enhancements:              
+    - Added SessionIdentifier new optional input field in Device object in /register.
+    - Added sessionIdentifier new optional input field in ./add register-data for add device.
+    - Added kycLevel new optional input field in /check_kyc. 
+    - Added KycLevel new optional input field in /check_instant_ach.
+    - Added new processing type "INSTANT_SETTLEMENT" in ProcessingType object in /issue_sila.
+    - Added ProcessingType object new optional input fields in SearchFilters and ChildTransactions array to the Transaction response in /get_transactions.                   
+New Features:
+    - Added support for /retry_webhook endpoint.
+
 v0.2.37
 Enhancements:        
     - Added SourceId, DestinationId new optional input fields in SearchFilters and EffectiveDate, EffectiveEpoch, SilaLedgerType, SourceId, DestinationId, DestinationSilaLedgerType, LedgerAccountId, DestinationLedgerAccountId in response in /get_transactions.
