--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -4,7 +4,7 @@ Enhancements:
     - Added Provider field to the response in /get_account_balance.
     - Added ProviderName field to the response in /get_accounts.
 New Feature:
-    - Created a new method LinkAccountMx to support for MX in /link_account endpoint.
+    - Created a new method LinkAccountMx to support for MX provider tokens in /link_account endpoint.
 
 v0.2.48
 Enhancements:	
