ENGRG-2158 updated packages and fixed broken tests.

--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+v0.2.51:
+Enhancements
+    - Updated packages
+    - Fixed broken Tests
+
 v0.2.50
 New Feature:
     - Created a new method GetWalletStatementData to support for /get_wallet_statement_data.
