--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,9 @@
+v1.0.0-rc1
+Hotfix:
+Enhancements:
+     - Added support for /statements.
+
+
 v1.0.0:
 Breaking Changes
     - Removed support for deprecated .NET frameworks 4.6.1 and 4.6
