--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,6 @@
+v1.0.2
+    - Added notices.txt
+
 v1.0.1
 New Features:
     - Created a new method CreateCkoTestingToken to support for /create_cko_testing_token.
