--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -1,3 +1,8 @@
+v1.1.0
+    - removed obsolete Device code
+    - deprecated SMS related options
+    - removed obsolete endpoints
+
 v1.0.2
     - Added notices.txt
     - Switched BouncyCastle to BouncyCastle.Cryptography
