--- a/SilaAPI/RELEASE-NOTES.txt
+++ b/SilaAPI/RELEASE-NOTES.txt
@@ -2,6 +2,7 @@ v1.1.0
     - removed obsolete Device code
     - deprecated SMS related options
     - removed obsolete endpoints
+    - added support for .NET 8.0
 
 v1.0.2
     - Added notices.txt
